--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
 		<version>2.4.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>kodlamaio</groupId>
-	<artifactId>northwind</artifactId>
+	<groupId>projects</groupId>
+	<artifactId>hrms</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>northwind</name>
 	<description>Demo project for Spring Boot</description>
